update project till footer and fix navbar-collapse problem

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -47,18 +47,28 @@ body{
     width: 150px;
     height: 50px;
 }
+.logo-top{
+    margin: 20px 0;    
+}
 .navbar-main{
     background: $white;
     height: 90px;
-    margin: 5px 0;
 }
 @media screen and (max-width: 767px){
     .navbar-main{
-        margin: 8px 15px;
         height: auto;
     }
     .navbar{
         min-height: 0;
+    }
+    .navbar-toggle{
+        margin: 28px 15px 20px 0;
+    }
+    .logo-top{
+        margin: 20px 0 20px 15px;
+    }
+    .navbar-search{
+        margin-bottom: 20px;
     }
 }
 #bs-technews-navbar-collapse{
@@ -66,8 +76,27 @@ body{
 }
 .navbar-search{
     border: none;
+}
+.navbar-header{
     height: 90px;
-    padding-top: 1.5%;
+}
+.navbar-brand{
+    height: 100%;
+}
+.navbar{
+    border: none;
+}
+@media screen and (min-width: 768px){
+    .navbar-nav{
+        height: 90px;
+        >li{
+            margin: 20px 0;
+        }
+    }
+    .navbar-search{
+        height: 90px;
+        padding: 5.5% 0;
+    }
 }
 /* END: NAVIGATION */
 /* CONTENT */
@@ -150,6 +179,8 @@ body{
 .ABF{
     background-color: $black;
     color: $white;
+    height: 299px;
+    border-bottom: 1px solid $light-black;
 }
 .brand-bottom{
     float: none;
@@ -187,4 +218,21 @@ body{
         color: $white;
     }
 }
+@media screen and (max-width: 991px){
+    .ABF{
+        height: auto;
+    }
+    .contact-form{
+        button{
+            margin-bottom: 20px;
+        }
+    }
+}
 /* END: ABF */
+/* FOOTER */
+footer{
+    color: $white;
+    background-color: $black;
+    padding: 15px 0;
+}
+/* END: FOOTER */
